@@ -45,4 +45,5 @@ xt/create-standalone.sh
 xt/calculate-mr-probs.pl
 examples/bench-mp-psrp.pl
 examples/verify-cert.pl
+examples/convert-primo-cert.pl
 .travis.yml
